--- a/AbsenceMonitor/SchoolAbsenceMonitorUI/MainDashboard.xaml
+++ b/AbsenceMonitor/SchoolAbsenceMonitorUI/MainDashboard.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SchoolAbsenceMonitorUI.Window1"
+﻿<Window x:Class="SchoolAbsenceMonitorUI.MainDashboard"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
-        Title="SchoolAbsenceMonitor" Height="800" Width="1000" MaxHeight="800" MinHeight="800" MaxWidth="1000" MinWidth="1000" >
+        WindowState="Maximized"
+        Title="SchoolAbsenceMonitor">
     <Grid>
         <!-- Add the column and row definitions for the main dashboard--> 
         <Grid.ColumnDefinitions>
@@ -37,21 +38,21 @@
                         HorizontalAlignment="Right" 
                         VerticalAlignment="Center"  
                         Margin="0,0,10,0"
-                        Click="btnExitApp_Click"/>
+                        Click="BtnExitApp_Click"/>
             </Grid>
         </StackPanel>
         <!-- Main dashboard menu bar - Attendance enabled by default -->
         <TabControl Name="Tab_MainTabControl" Grid.ColumnSpan="2" Grid.Row="1" HorizontalAlignment="Left" Margin="10,0" VerticalAlignment="Top" FontFamily="Calibri" FontSize="12" FontWeight="Medium">
-            <TabItem Name="tbi_Attendance" Height="26" Width="100" Header="Attendance" IsEnabled="True" IsSelected="True" MouseDown="tbi_Admin_MouseLeftButtonDown" MouseLeftButtonDown="tbi_Attendance_MouseLeftButtonDown" >
+            <TabItem Name="tbi_Attendance" Height="26" Width="100" Header="Attendance" IsEnabled="True" IsSelected="True" MouseLeftButtonUp="Tbi_Attendance_MouseLeftButtonDown" >
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
-            <TabItem Name="tbi_Reporting" Height="26" Width="100" Header="Reports" IsEnabled="False" MouseLeftButtonDown="tbi_Reporting_MouseLeftButtonDown"   >
+            <TabItem Name="Tbi_Reporting" Height="26" Width="100" Header="Reports" IsEnabled="True" MouseLeftButtonUp="Tbi_Reporting_MouseLeftButtonDown"   >
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
-            <TabItem Name="tbi_Admin" Height="26" Width="100" Header="Administration" IsEnabled="False" MouseLeftButtonDown="tbi_Admin_MouseLeftButtonDown">
+            <TabItem Name="Tbi_Admin" Height="26" Width="100" Header="Administration" IsEnabled="True" MouseLeftButtonUp="Tbi_Admin_MouseLeftButtonDown">
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
-            <TabItem Name="tbi_System" Height="26" Width="100" Header="System" IsEnabled="False" MouseLeftButtonDown="tbi_System_MouseLeftButtonDown">
+            <TabItem Name="Tbi_ApplicationLogs" Height="26" Width="100" Header="System" IsEnabled="True" MouseLeftButtonUp="Tbi_ApplicationLogs_MouseLeftButtonDown">
                 <Grid Background="#FFE5E5E5"/>
             </TabItem>
         </TabControl>
